examples/pass/lambda.uplp
let f = |x: Num| x + 1 in
f 1