examples/fail/division_by_zero.uplp
let zero = 0 in 1 / zero